// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assignment 1`] = `
[
  [
    "BinaryExpression",
    [
      30,
      35,
    ],
    [
      "a - b",
      -1,
    ],
    [
      "a",
      3,
    ],
    [
      "b",
      4,
    ],
  ],
]
`;

exports[`async 1`] = `
[
  [
    "BinaryExpression",
    [
      57,
      63,
    ],
    [
      "x ** y",
      81,
    ],
    [
      "x",
      3,
    ],
    [
      "y",
      4,
    ],
  ],
  [
    "BinaryExpression",
    [
      57,
      63,
    ],
    [
      "x ** y",
      81,
    ],
    [
      "x",
      3,
    ],
    [
      "y",
      4,
    ],
  ],
  [
    "BinaryExpression",
    [
      76,
      95,
    ],
    [
      "(await d(a, b)) + c",
      86,
    ],
    [
      "await d(a, b)",
      81,
    ],
    [
      "c",
      5,
    ],
  ],
  [
    "BinaryExpression",
    [
      57,
      63,
    ],
    [
      "x ** y",
      81,
    ],
    [
      "x",
      3,
    ],
    [
      "y",
      4,
    ],
  ],
  [
    "CallExpression",
    [
      83,
      90,
    ],
    [
      "d(a, b)",
      81,
    ],
    [
      "a",
      3,
    ],
    [
      "b",
      4,
    ],
  ],
  [
    "BinaryExpression",
    [
      57,
      63,
    ],
    [
      "x ** y",
      81,
    ],
    [
      "x",
      3,
    ],
    [
      "y",
      4,
    ],
  ],
]
`;

exports[`binary 1`] = `
[
  [
    "BinaryExpression",
    [
      29,
      38,
    ],
    [
      "b + c * 2",
      14,
    ],
    [
      "b",
      4,
    ],
    [
      "c * 2",
      10,
    ],
  ],
  [
    "BinaryExpression",
    [
      33,
      38,
    ],
    [
      "c * 2",
      10,
    ],
    [
      "c",
      5,
    ],
    [
      "2",
      2,
    ],
  ],
]
`;

exports[`call 1`] = `
[
  [
    "BinaryExpression",
    [
      45,
      51,
    ],
    [
      "x ** y",
      81,
    ],
    [
      "x",
      3,
    ],
    [
      "y",
      4,
    ],
  ],
  [
    "BinaryExpression",
    [
      45,
      51,
    ],
    [
      "x ** y",
      81,
    ],
    [
      "x",
      3,
    ],
    [
      "y",
      4,
    ],
  ],
  [
    "BinaryExpression",
    [
      64,
      96,
    ],
    [
      "Math.pow(4 * a, 2) + d(a, b) + c",
      230,
    ],
    [
      "Math.pow(4 * a, 2) + d(a, b)",
      225,
    ],
    [
      "c",
      5,
    ],
  ],
  [
    "BinaryExpression",
    [
      45,
      51,
    ],
    [
      "x ** y",
      81,
    ],
    [
      "x",
      3,
    ],
    [
      "y",
      4,
    ],
  ],
  [
    "BinaryExpression",
    [
      45,
      51,
    ],
    [
      "x ** y",
      81,
    ],
    [
      "x",
      3,
    ],
    [
      "y",
      4,
    ],
  ],
  [
    "BinaryExpression",
    [
      64,
      92,
    ],
    [
      "Math.pow(4 * a, 2) + d(a, b)",
      225,
    ],
    [
      "Math.pow(4 * a, 2)",
      144,
    ],
    [
      "d(a, b)",
      81,
    ],
  ],
  [
    "CallExpression",
    [
      64,
      82,
    ],
    [
      "Math.pow(4 * a, 2)",
      144,
    ],
    [
      "4 * a",
      12,
    ],
    [
      "2",
      2,
    ],
  ],
  [
    "BinaryExpression",
    [
      73,
      78,
    ],
    [
      "4 * a",
      12,
    ],
    [
      "4",
      4,
    ],
    [
      "a",
      3,
    ],
  ],
  [
    "BinaryExpression",
    [
      45,
      51,
    ],
    [
      "x ** y",
      81,
    ],
    [
      "x",
      3,
    ],
    [
      "y",
      4,
    ],
  ],
  [
    "CallExpression",
    [
      85,
      92,
    ],
    [
      "d(a, b)",
      81,
    ],
    [
      "a",
      3,
    ],
    [
      "b",
      4,
    ],
  ],
  [
    "BinaryExpression",
    [
      45,
      51,
    ],
    [
      "x ** y",
      81,
    ],
    [
      "x",
      3,
    ],
    [
      "y",
      4,
    ],
  ],
]
`;

exports[`escape string 1`] = `
[
  [
    "BinaryExpression",
    [
      32,
      57,
    ],
    [
      ""x'x" + a * b + c + 'z"z'",
      "x'x12yz"z",
    ],
    [
      ""x'x" + a * b + c",
      "x'x12y",
    ],
    [
      "'z"z'",
      "z"z",
    ],
  ],
  [
    "BinaryExpression",
    [
      32,
      49,
    ],
    [
      ""x'x" + a * b + c",
      "x'x12y",
    ],
    [
      ""x'x" + a * b",
      "x'x12",
    ],
    [
      "c",
      "y",
    ],
  ],
  [
    "BinaryExpression",
    [
      32,
      45,
    ],
    [
      ""x'x" + a * b",
      "x'x12",
    ],
    [
      ""x'x"",
      "x'x",
    ],
    [
      "a * b",
      12,
    ],
  ],
  [
    "BinaryExpression",
    [
      40,
      45,
    ],
    [
      "a * b",
      12,
    ],
    [
      "a",
      3,
    ],
    [
      "b",
      4,
    ],
  ],
]
`;

exports[`for loop 1`] = `
[
  [
    "BinaryExpression",
    [
      47,
      56,
    ],
    [
      "i < a + b",
      true,
    ],
    [
      "i",
      0,
    ],
    [
      "a + b",
      7,
    ],
  ],
  [
    "BinaryExpression",
    [
      51,
      56,
    ],
    [
      "a + b",
      7,
    ],
    [
      "a",
      3,
    ],
    [
      "b",
      4,
    ],
  ],
  [
    "BinaryExpression",
    [
      67,
      72,
    ],
    [
      "c + i",
      5,
    ],
    [
      "c",
      5,
    ],
    [
      "i",
      0,
    ],
  ],
  [
    "BinaryExpression",
    [
      47,
      56,
    ],
    [
      "i < a + b",
      true,
    ],
    [
      "i",
      1,
    ],
    [
      "a + b",
      7,
    ],
  ],
  [
    "BinaryExpression",
    [
      51,
      56,
    ],
    [
      "a + b",
      7,
    ],
    [
      "a",
      3,
    ],
    [
      "b",
      4,
    ],
  ],
  [
    "BinaryExpression",
    [
      67,
      72,
    ],
    [
      "c + i",
      6,
    ],
    [
      "c",
      5,
    ],
    [
      "i",
      1,
    ],
  ],
  [
    "BinaryExpression",
    [
      47,
      56,
    ],
    [
      "i < a + b",
      true,
    ],
    [
      "i",
      2,
    ],
    [
      "a + b",
      7,
    ],
  ],
  [
    "BinaryExpression",
    [
      51,
      56,
    ],
    [
      "a + b",
      7,
    ],
    [
      "a",
      3,
    ],
    [
      "b",
      4,
    ],
  ],
  [
    "BinaryExpression",
    [
      67,
      72,
    ],
    [
      "c + i",
      8,
    ],
    [
      "c",
      6,
    ],
    [
      "i",
      2,
    ],
  ],
  [
    "BinaryExpression",
    [
      47,
      56,
    ],
    [
      "i < a + b",
      true,
    ],
    [
      "i",
      3,
    ],
    [
      "a + b",
      7,
    ],
  ],
  [
    "BinaryExpression",
    [
      51,
      56,
    ],
    [
      "a + b",
      7,
    ],
    [
      "a",
      3,
    ],
    [
      "b",
      4,
    ],
  ],
  [
    "BinaryExpression",
    [
      67,
      72,
    ],
    [
      "c + i",
      11,
    ],
    [
      "c",
      8,
    ],
    [
      "i",
      3,
    ],
  ],
  [
    "BinaryExpression",
    [
      47,
      56,
    ],
    [
      "i < a + b",
      true,
    ],
    [
      "i",
      4,
    ],
    [
      "a + b",
      7,
    ],
  ],
  [
    "BinaryExpression",
    [
      51,
      56,
    ],
    [
      "a + b",
      7,
    ],
    [
      "a",
      3,
    ],
    [
      "b",
      4,
    ],
  ],
  [
    "BinaryExpression",
    [
      67,
      72,
    ],
    [
      "c + i",
      15,
    ],
    [
      "c",
      11,
    ],
    [
      "i",
      4,
    ],
  ],
  [
    "BinaryExpression",
    [
      47,
      56,
    ],
    [
      "i < a + b",
      true,
    ],
    [
      "i",
      5,
    ],
    [
      "a + b",
      7,
    ],
  ],
  [
    "BinaryExpression",
    [
      51,
      56,
    ],
    [
      "a + b",
      7,
    ],
    [
      "a",
      3,
    ],
    [
      "b",
      4,
    ],
  ],
  [
    "BinaryExpression",
    [
      67,
      72,
    ],
    [
      "c + i",
      20,
    ],
    [
      "c",
      15,
    ],
    [
      "i",
      5,
    ],
  ],
  [
    "BinaryExpression",
    [
      47,
      56,
    ],
    [
      "i < a + b",
      true,
    ],
    [
      "i",
      6,
    ],
    [
      "a + b",
      7,
    ],
  ],
  [
    "BinaryExpression",
    [
      51,
      56,
    ],
    [
      "a + b",
      7,
    ],
    [
      "a",
      3,
    ],
    [
      "b",
      4,
    ],
  ],
  [
    "BinaryExpression",
    [
      67,
      72,
    ],
    [
      "c + i",
      26,
    ],
    [
      "c",
      20,
    ],
    [
      "i",
      6,
    ],
  ],
  [
    "BinaryExpression",
    [
      47,
      56,
    ],
    [
      "i < a + b",
      false,
    ],
    [
      "i",
      7,
    ],
    [
      "a + b",
      7,
    ],
  ],
  [
    "BinaryExpression",
    [
      51,
      56,
    ],
    [
      "a + b",
      7,
    ],
    [
      "a",
      3,
    ],
    [
      "b",
      4,
    ],
  ],
]
`;
